--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "eslint": "^9.34.0",
     "express": "^4.18.1",
     "nodemon": "^3.1.10",
