--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.18.1",
     "nodemon": "^3.1.10",
     "sequelize": "^6.37.7",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "sweetalert2": "^11.23.0"
   },
   "homepage": "https://github.com/Plastikao/ColetasGroup#readme",
   "keywords": [],
