--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "eslint": "^9.34.0",
     "express": "^4.18.1",
+    "mongodb": "^6.19.0",
     "nodemon": "^3.1.10",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
