--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^9.34.0",
     "express": "^4.18.1",
     "mongodb": "^6.19.0",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
